<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/profileActivity"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.profile.ProfileActivity">

    <TextView
        android:id="@+id/wallet_address"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="148dp"
        android:text="TextView"
        android:textAlignment="center"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/friend_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="@string/wallet_name" />

    <ImageView
        android:id="@+id/profile_default_pic"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:visibility="visible"
        app:layout_constraintBottom_toTopOf="@+id/wallet_address"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.26"
        tools:srcCompat="@drawable/shang_chi_stock_photo"
        tools:visibility="visible" />

    <TextView
        android:id="@+id/profile_username"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="TextView"
        android:textAlignment="center"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/wallet_chart"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.18"
        tools:text="@string/profile_name" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/friend_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:checkable="true"
        android:fontFamily="@font/proxima_nova_regular"
        android:text="@string/add_friend_button"
        android:textColor="#455A64"
        app:backgroundTint="@color/friend_button"
        app:cornerRadius="20dp"
        app:icon="@drawable/btn_icons"
        app:iconGravity="textEnd"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.298" />

    <com.github.mikephil.charting.charts.LineChart
        android:id="@+id/wallet_chart"
        android:layout_width="match_parent"
        android:layout_height="271dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/profile_graph_options">

    </com.github.mikephil.charting.charts.LineChart>

    <Spinner
        android:id="@+id/profile_graph_options"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginTop="32dp"
        android:layout_weight="1"
        android:contentDescription="@string/time_opt_default"
        app:layout_constraintBottom_toBottomOf="parent"
        android:backgroundTint="#E6E6E6"
        android:backgroundTintMode="add"
        android:elevation="8dp"
        android:foregroundTint="#B6B4B4"
        android:popupElevation="14dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/friend_button"
        app:layout_constraintVertical_bias="0.002" />


</androidx.constraintlayout.widget.ConstraintLayout>