...
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            tools:context=".leaderboard">

            <ListView
                android:id="@+id/search_results_list"
                android:layout_width="wrap_content"
                android:layout_height="668dp"
                android:layout_weight="1.0">

            </ListView>

...
