<?xml version="1.0" encoding="utf-8"?>
<!-- -
This code is taken from and adapted from (this includes relevant .xml files):
https://stackoverflow.com/questions/34518421/adding-a-scoreboard-to-an-android-studio-application
https://stackoverflow.com/questions/60478873/make-a-leaderboard-using-a-listview
-->
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/leaderboard_container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.search.SearchFragment">

    <androidx.core.widget.NestedScrollView
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:context=".MainActivity">

        <LinearLayout
            android:id="@+id/leaderboard_content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            tools:context=".leaderboard">

            <ListView
                android:id="@+id/list"
                android:layout_width="wrap_content"
                android:layout_height="668dp"
                android:layout_weight="1.0">

            </ListView>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="0.38">

            </RelativeLayout>

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>