<resources>
    <string name="app_name">tyfw</string>
    <string name="title_home">Home</string>
    <string name="title_leaderboard">Leaderboard</string>
    <string name="title_search">Search</string>
    <string name="title_social">Social</string>
    <string name="title_settings">Settings</string>
    <string name="title_notifications">Notifications</string>
    <string name="ai_button">AI prediction</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
...
